--- a/update-site-archive/index.html
+++ b/update-site-archive/index.html
@@ -20,6 +20,7 @@
 <p>
     <ul>
         <li><a href="https://microfocus.github.io/octane-eclipse-plugin/update-site">Latest</a></li>
+		<li><a href="https://microfocus.github.io/octane-eclipse-plugin/update-site-archive/12.55.32.v20180612_64">12.55.32.v20180612_64</a></li>
 		<li><a href="https://microfocus.github.io/octane-eclipse-plugin/update-site-archive/12.55.17.v20180322_56">12.55.17.v20180322_56</a></li>
 		<li><a href="https://microfocus.github.io/octane-eclipse-plugin/update-site-archive/12.55.13.v20180202_43">12.55.13.v20180202_43</a></li>
 		<li><a href="https://microfocus.github.io/octane-eclipse-plugin/update-site-archive/12.55.8.v20171124_42">12.55.8.v20171124_42</a></li>
