--- a/update-site/index.html
+++ b/update-site/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="icon" href="../../favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <title>Eclipse IDE Integration for ALM Octane, version 12.60.4.v20180720_75</title>
+    <title>Eclipse IDE Integration for ALM Octane, version 12.60.16.v20181023_76</title>
     <style>
         * {
             font-family: 'Open Sans', sans-serif;
@@ -18,9 +18,9 @@
     </style>
 </head>
 <body>
-<h1>Eclipse IDE Integration for ALM Octane, version 12.60.4.v20180720_75</h1>
+<h1>Eclipse IDE Integration for ALM Octane, version 12.60.16.v20181023_7​6</h1>
 
-<p><b>This is an update site</b> for the Eclipse IDE Integration for ALM Octane, version 12.60.4.v20180720_75.</p>
+<p><b>This is an update site</b> for the Eclipse IDE Integration for ALM Octane, version 12.60.16.v20181023_7​6.</p>
 
 <h3>Eclipse Marketplace Install</h3>
 <p>
