Releasing new version: 12.60.47.v20190514_80

--- a/update-site-archive/index.html
+++ b/update-site-archive/index.html
@@ -20,6 +20,7 @@
 <p>
     <ul>
         <li><a href="https://microfocus.github.io/octane-eclipse-plugin/update-site">Latest</a></li>
+		<li><a href="https://microfocus.github.io/octane-eclipse-plugin/update-site-archive/12.60.47.v20190514_80">12.60.47.v20190514_80</a></li>
 		<li><a href="https://microfocus.github.io/octane-eclipse-plugin/update-site-archive/12.60.16.v20181023_76">12.60.16.v20181023_76</a></li>
 		<li><a href="https://microfocus.github.io/octane-eclipse-plugin/update-site-archive/12.60.4.v20180720_75">12.60.4.v20180720_75</a></li>
 		<li><a href="https://microfocus.github.io/octane-eclipse-plugin/update-site-archive/12.55.32.v20180612_64">12.55.32.v20180612_64</a></li>
