--- a/update-site/index.html
+++ b/update-site/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="icon" href="../../favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <title>Eclipse IDE Integration for ALM Octane, version 12.60.47.v20190514_80</title>
+    <title>Eclipse IDE Integration for ALM Octane, version 12.60.60.v20190902_81</title>
     <style>
         * {
             font-family: 'Open Sans', sans-serif;
@@ -15,12 +15,17 @@
         #copyLink {
             font-size: 120%;
         }
+		hr {
+			border-style: solid;
+			border: 1px solid #CCC;
+		}
     </style>
 </head>
 <body>
-<h1>Eclipse IDE Integration for ALM Octane, version 12.60.47.v20190514_80</h1>
+<h1>Eclipse IDE Integration for ALM Octane, version 12.60.60.v20190902_81</h1>
 
-<p><b>This is an update site</b> for the Eclipse IDE Integration for ALM Octane, version 12.60.47.v20190514_80.</p>
+<p><b>This is an update site</b> for the Eclipse IDE Integration for ALM Octane, version 12.60.60.v20190902_81.</p>
+<hr>
 
 <h3>Eclipse Marketplace Install</h3>
 <p>
@@ -34,19 +39,31 @@
     </p>
 
 </p>
+<hr>
 
 <h3>Alternative Install</h3>
-
 <p>
 Go to <b>Help > Install New Software</b>, and paste this URL into the dialog box. Follow the on-screen instructions from there. <br/>
 <a id="copyLink" href="https://microfocus.github.io/octane-eclipse-plugin/update-site/">https://microfocus.github.io/octane-eclipse-plugin/update-site</a>
 </p>
+<hr>
+
+<h3>Offline Install</h3>
+<p>
+You can download a zip archive of this build by clicking the following link:  <a href="12.60.60.v20190902_81.zip">12.60.60.v20190902_81.zip</a>
+<br/><br/>
+To install from a zip archive on a machine with no network access to this update site: <br>
+Go to <b>Help > Install New Software</b><br>
+In the <b>"Work with"</b> text field add the local path of the zip archive in the following format: <b>jar:file:/C:/Download/12.60.60.v20190902_81.zip!/</b><br>
+As an alternative you can click <b>"Add"</b> > <b>"Archive"</b> and locate the zip file on the disk.
+</p>
+<hr>
 
 <h3>Other Versions</h3>
 <p>
 Latest release: <a href="https://microfocus.github.io/octane-eclipse-plugin/update-site">https://microfocus.github.io/octane-eclipse-plugin/update-site</a> <br/>
 Older versions: <a href="https://microfocus.github.io/octane-eclipse-plugin/update-site-archive">https://microfocus.github.io/octane-eclipse-plugin/update-site-archive</a>
 </p>
-
+<hr>
 </body>
 </html>
