--- a/update-site-archive/index.html
+++ b/update-site-archive/index.html
@@ -20,6 +20,7 @@
 <p>
     <ul>
         <li><a href="https://microfocus.github.io/octane-eclipse-plugin/update-site">Latest</a></li>
+		<li><a href="https://microfocus.github.io/octane-eclipse-plugin/update-site-archive/15.1.90.v20210511_33">15.1.90.v20210511_33</a></li>
 		<li><a href="https://microfocus.github.io/octane-eclipse-plugin/update-site-archive/15.1.60.v20210211_32">15.1.60.v20210211_32</a></li>
 		<li><a href="https://microfocus.github.io/octane-eclipse-plugin/update-site-archive/15.1.40.v20201112_26">15.1.40.v20201112_26</a></li>
 		<li><a href="https://microfocus.github.io/octane-eclipse-plugin/update-site-archive/15.1.40.v20201007_25">15.1.40.v20201007_25</a></li>
