--- a/update-site-archive/index.html
+++ b/update-site-archive/index.html
@@ -20,6 +20,7 @@
 <p>
     <ul>
         <li><a href="https://microfocus.github.io/octane-eclipse-plugin/update-site">Latest</a></li>
+		<li><a href="https://microfocus.github.io/octane-eclipse-plugin/update-site-archive/2023.0.0">2023.0.0</a></li>
 		<li><a href="https://microfocus.github.io/octane-eclipse-plugin/update-site-archive/2022.0.0">2022.0.0</a></li>
 		<li><a href="https://microfocus.github.io/octane-eclipse-plugin/update-site-archive/16.0.400.v20220509_50">16.0.400.v20220509_50</a></li>
 		<li><a href="https://microfocus.github.io/octane-eclipse-plugin/update-site-archive/16.0.300.v20220207_47">16.0.300.v20220207_47</a></li>
