tech: increase version to 24.2.0

--- a/update-site-archive/index.html
+++ b/update-site-archive/index.html
@@ -20,6 +20,7 @@
 <p>
     <ul>
         <li><a href="https://microfocus.github.io/octane-eclipse-plugin/update-site">Latest</a></li>
+		<li><a href="https://microfocus.github.io/octane-eclipse-plugin/update-site-archive/24.2.0">24.2.0</a></li>
 		<li><a href="https://microfocus.github.io/octane-eclipse-plugin/update-site-archive/2023.1.1">2023.1.1</a></li>
 		<li><a href="https://microfocus.github.io/octane-eclipse-plugin/update-site-archive/2023.1.0">2023.1.0</a></li>
 		<li><a href="https://microfocus.github.io/octane-eclipse-plugin/update-site-archive/2023.0.0">2023.0.0</a></li>
