tech: rebrand to ValueEdge

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <title>Eclipse IDE Integration for ALM Octane</title>
+    <title>Eclipse IDE Integration for ValueEdge</title>
     <style>
         * {
             font-family: 'Open Sans', sans-serif;
@@ -15,7 +15,7 @@
     </style>
 </head>
 <body>
-<h1>Eclipse IDE Integration for ALM Octane</h1>
+<h1>Eclipse IDE Integration for ValueEdge</h1>
 <h3>Versions</h3>
 <p>
     Latest release: <a href="https://microfocus.github.io/octane-eclipse-plugin/update-site">https://microfocus.github.io/octane-eclipse-plugin/update-site</a> <br/>
